<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.saurabh.accelerometer.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#508be3">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM//+"
        android:ems="10"
        android:id="@+id/Name"
        android:hint="@string/PatientName"
        android:width="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/Age"
        android:hint="@string/PatientAge"
        android:width="60dp"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/Name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/ID"
        android:hint="@string/PatientID"
        android:width="90dp"
        android:layout_below="@+id/Age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <RadioGroup
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGrp"
        android:weightSum="1"
        android:layout_alignWithParentIfMissing="false"
        android:gravity="center|center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioMale"
            android:id="@+id/radio_male"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioFemale"
            android:id="@+id/radio_female"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/next_button"
        android:layout_below="@+id/radioGrp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

</RelativeLayout>


