<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.saurabh.accelerometer.MainActivity2"
    tools:showIn="@layout/activity_main2"
    android:background="#508be3">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartButton"
        android:id="@+id/start_button"
        android:onClick="startButtonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/graph"
        android:layout_alignStart="@+id/graph" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StopButton"
        android:id="@+id/stop_button"
        android:layout_alignTop="@+id/upload_button"
        android:layout_alignLeft="@+id/start_button"
        android:layout_alignStart="@+id/start_button" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:background="#979191"
        android:id="@+id/graph"
        android:layout_below="@+id/stop_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"></LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UploadButton"
        android:id="@+id/upload_button"
        android:layout_below="@+id/start_button"
        android:layout_alignRight="@+id/graph"
        android:layout_alignEnd="@+id/graph" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DownloadButton"
        android:id="@+id/download_button"
        android:layout_above="@+id/upload_button"
        android:layout_alignRight="@+id/upload_button"
        android:layout_alignEnd="@+id/upload_button" />

</RelativeLayout>


